fix stuff & add statistics